// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsList Component renders the UI as expected 1`] = `
<body>
  <div>
    <section
      class="PostsList"
    >
      <header>
        <h2>
          Posts
        </h2>
      </header>
      <ul>
        <li
          class="PostsList__blog-post"
        >
          <a
            class="PostsList__title"
            href="/blog-posts/8"
          >
            Title8
          </a>
          <p
            class="timestamp"
          >
            Last edited: 
            12:22:39 Jan 06, 2021
          </p>
        </li>
        <li
          class="PostsList__blog-post"
        >
          <a
            class="PostsList__title"
            href="/blog-posts/6"
          >
            Title6
          </a>
          <p
            class="timestamp"
          >
            Last edited: 
            14:22:39 Jan 05, 2021
          </p>
        </li>
        <li
          class="PostsList__blog-post"
        >
          <a
            class="PostsList__title"
            href="/blog-posts/4"
          >
            Cooking Basics for Beginners
          </a>
          <p
            class="timestamp"
          >
            Last edited: 
            08:28:28 Jan 05, 2021
          </p>
        </li>
      </ul>
      <div
        class="TransitionButtons"
      >
        <button
          class="TransitionButtons__prev"
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          class="TransitionButtons__next"
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;

exports[`PostsList Component switches to the next group of blog posts after clicking 'Next' 1`] = `
<body>
  <div>
    <section
      class="PostsList"
    >
      <header>
        <h2>
          Posts
        </h2>
      </header>
      <ul>
        <li
          class="PostsList__blog-post"
        >
          <a
            class="PostsList__title"
            href="/blog-posts/3"
          >
            5 Easy Cooking Tips
          </a>
          <p
            class="timestamp"
          >
            Last edited: 
            12:54:31 Dec 01, 2020
          </p>
        </li>
      </ul>
      <div
        class="TransitionButtons"
      >
        <button
          class="TransitionButtons__prev"
          type="button"
        >
          Previous
        </button>
        <button
          class="TransitionButtons__next"
          disabled=""
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;
